changed the search box

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <p>GIPHY API</p>
         </div>
         <div class="search">
-            <input type="text" class="search-box" placeholder="Search...">
-            <span class="search-icon"><i class="ph ph-magnifying-glass"></i></span>
+            <input type="text" class="search-box">
+            <button class="search-btn"><i class="ph ph-magnifying-glass"></i></button>
         </div>
     </section>
 </body>
