--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
             <p>GIPHY API</p>
         </div>
         <div class="search">
-            <input type="text" class="search-box">
-            <button class="search-btn"><i class="ph ph-magnifying-glass"></i></button>
+            <input id="searchInput" type="text" class="search-box" value="laugh">
+            <button id="search-btn" class="ph ph-magnifying-glass"></button>
         </div>
     </section>
+    <div class="wrapper"></div>
+    <script src="/api-key.js"></script>
+    <script src="/main.js"></script>
 </body>
 </html>
