--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="navbar">
         <div class="logo">
-            <img src="/logo/giphy_api_logo.png" alt="logo">
+            <img src="logo/giphy_api_logo.png" alt="logo">
             <p>GIPHY API</p>
         </div>
         <div class="search">
@@ -19,7 +19,7 @@
         </div>
     </section>
     <div class="wrapper"></div>
-    <script src="/api-key.js"></script>
-    <script src="/main.js"></script>
+    <script src="api-key.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
