changes in the size values

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>GIPHY API</p>
         </div>
         <div class="search">
-            <input id="searchInput" type="text" class="search-box" value="laugh">
+            <input id="searchInput" type="text" class="search-box" value="nature">
             <button id="search-btn" class="ph ph-magnifying-glass"></button>
         </div>
     </section>
